[gd_scene load_steps=4 format=3 uid="uid://oxtfrtm1jlcb"]

[ext_resource type="Script" path="res://scene/user_interface/gameui/game_hud.gd" id="1_ji0hn"]
[ext_resource type="PackedScene" path="res://scene/user_interface/entity/popup/game_over.tscn" id="2_tc58v"]
[ext_resource type="Texture2D" uid="uid://cxi8cvdv21b1h" path="res://assets/sprites/ui/pause.png" id="2_tfhw6"]

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1_ji0hn")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="PlayerLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player Name"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"

[node name="PauseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_tfhw6")
flat = true

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[node name="game_over" parent="." instance=ExtResource("2_tc58v")]
follow_viewport_enabled = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
